# nhanes-stroke-monte-carlo-misclassification

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: autogluon_leaderboard.csv  correlation_diff_pre_post_imputation.csv  cv_results.csv  holdout_predictions.csv  imputation_diagnostics.csv  missingness_mechanism_tests.csv  missingness_report.csv  monte_carlo_misclassification.csv  sensitivity_no_tierc_results.csv  shap_importance.csv  table1_weighted_final.csv  variable_codebook.csv
data/: nhanes_stroke_analytic_2003_2023.parquet  nhanes_stroke_imputed_2003_2023.parquet  nhanes_survey_design.rds
models/final/: learner.pkl  metadata.json  predictor.pkl
models/final/utils/attr/CatBoost/: y_pred_proba_val.pkl
models/final/utils/attr/ExtraTreesEntr/: y_pred_proba_val.pkl
models/final/utils/attr/ExtraTreesGini/: y_pred_proba_val.pkl
models/final/utils/attr/LightGBM/: y_pred_proba_val.pkl
models/final/utils/attr/LightGBMLarge/: y_pred_proba_val.pkl
models/final/utils/attr/LightGBMXT/: y_pred_proba_val.pkl
models/final/utils/attr/NeuralNetFastAI/: y_pred_proba_val.pkl
models/final/utils/attr/NeuralNetTorch/: y_pred_proba_val.pkl
models/final/utils/attr/RandomForestEntr/: y_pred_proba_val.pkl
models/final/utils/attr/RandomForestGini/: y_pred_proba_val.pkl
models/final/utils/attr/XGBoost/: y_pred_proba_val.pkl
models/final/utils/data/: X_val.pkl  y.pkl  y_val.pkl
scripts/: autogluon_modeling.py  hyperimpute_pipeline.py  missingness_heatmap.R  nhanes_data_extraction.R  table1_weighted.R
